# jobOptions_darkHiggsbb

./: .gitignore  README.md  run.sh  run_batch.sh  run_batch_derivations.sh  setup.sh
100xxx/100000/: MadGraphControl_MadGraphPythia8_N31LO_A14N23LO_monoSbb_CKKWL.py  mc.MGPy8EG_monoSbb_zp500_dm100_dh50.py
110xxx/110001/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50.py
110xxx/110003/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50.py
110xxx/110004/: MadGraphControl_MadGraphPythia8_N31LO_A14N23LO_monoSbb_CKKWL.py  mc.MGPy8EG_monoSbb_zp500_dm100_dh50.py
110xxx/110010/: mc.MGPy8EG_monoSbb_zp500_dm100_dh90.py
110xxx/110012/: mc.MGPy8EG_monoSbb_zp500_dm100_dh90.py
111xxx/111001/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx0p3.py
111xxx/111002/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx0p5.py
111xxx/111003/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx0p7.py  mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx1p5.py
111xxx/111004/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx1p0.py
111xxx/111005/: MadGraphControl_MadGraphPythia8_N31LO_A14N23LO_monoSbb_CKKWL.py  mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx1p3.py  mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx2p5.py
111xxx/111006/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx3p0.py
111xxx/111007/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx2p0.py  mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx3p5.py
111xxx/111009/: mc.MGPy8EG_monoSbb_zp500_dm100_dh50_gx2p7.py
111xxx/111010/: mc.MGPy8EG_monoSbb_zp500_dm100_dh90_gx0p1.py
111xxx/111016/: mc.MGPy8EG_monoSbb_zp500_dm100_dh90_gx1p7.py
111xxx/111018/: mc.MGPy8EG_monoSbb_zp500_dm100_dh90_gx2p3.py
batch_submission/: CMakeLists.txt  run.sh  setup.sh
batch_submission/ClusterSubmission/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
batch_submission/ClusterSubmission/data/: GRL.json  GRL_Tight.json
batch_submission/ClusterSubmission/python/: AMIDataBase.py  ClusterEngine.py  CreateAODFromDAODList.py  DatasetDownloader.py  DeleteFromGroupDisk.py  HTCondorEngine.py  ListDisk.py  LocalEngine.py  MergeFilesFromList.py  PandaBookKeeper.py  PeriodRunConverter.py  RequestToGroupDisk.py  RucioListBuilder.py  SGEEngine.py  SlurmEngine.py  SubmitScript.py  UpdateSampleLists.py  Utils.py  exeScript.py
batch_submission/ClusterSubmission/scripts/: Build.sh  Clean.sh  ClusterControlHTCONDOR.sh  ClusterControlLOCAL.sh  ClusterControlSLURM.sh  Copy.sh  Merge.sh  Move.sh  Run.sh  Singularity.sh
batch_submission/ClusterSubmission/util/: CreateBatchJobSplit.cxx
batch_submission/SubmitMC/: CMakeLists.txt
batch_submission/SubmitMC/python/: submit.py  submit_derivation.py
batch_submission/SubmitMC/scripts/: batch_derivation.sh  batch_evgen.sh
